Tue Dec 27 16:56:44 EST 2005

	Allow entry of replacement blank replacement strings when search
	prompting is enabled (basically eliminate automatic replace-string
	prompting).

	"bufed" now works like other file name commands (it prompts for a
	buffer name, and allows completion).

	H-scroll jumps left ~ 10 cols (this needs more work: it should be an
	option).

Tue May 17 18:20:02 EDT 2005

	Release JOE 3.3

Tue May  3 13:33:21 EDT 2005

	Add .cc file type

Sun Apr 24 00:16:25 EDT 2005

	Fix compiler warnings from gcc-4.0.0

Fri Apr 22 00:47:55 EDT 2005

	Fix ctrl-select bug when near buffer edges

	Don't use nl_langinfo(CODESET) in Cygwin.

	Add Ada syntax file

Thu Apr 21 15:46:09 EDT 2005

	Add some grep find support:
		ESC g   execute grep
		ESC SP  jump to "file line:"

	Add xterm-patch to make dist.

Sun Apr 17 12:05:32 EDT 2005

	Scripts for Cygwin.
	Version numbering scheme for Cygwin.

Fri Apr  8 10:27:24 EDT 2005

	Add awk syntax file
	Use c syntax file for yacc
	Use c syntax file for lex
	Add cobol syntax file
	Add sed syntax file
	Add postscript syntax file

Thu Apr  7 18:25:07 EDT 2005

	Add sql syntax file

Wed Apr  6 12:39:15 EDT 2005

	New xterm-patch: base64 encode the data to avoid security hole

Fri Apr  1 00:14:58 EST 2005

	Improve jpico: add -search_prompting option.

	Fix ^X ^S bug (was using vsdup() on a non-dynamic string).

	Add autoscrolling (when mouse goes past window edge).

Wed Mar 30 23:47:00 EST 2005

	New xterm-patch fixes i18n problems with mouse.

Tue Mar 29 19:19:42 EST 2005

	Fix some cut & paste bugs.

	Wheel can scroll menus.

	Fix bugs with mouse in hex mode, prompt windows
	and when line numbers enabled.

	Prevent hex mode from prompt windows.

	Fix some i18n issues with mouse:  xterm patch
	needs to be fixed.

Mon Mar 28 02:17:37 EST 2005

	Apply (and fix) background color patch

	Allow background color to be set on object-by-object basis.

Sat Mar 26 09:56:23 EST 2005

	Fix some window resize bugs
